--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -1,7 +1,7 @@
     :root {
         --one: #8426ff;
         --two: #3ab6ff;
-        --three: #00ff5e;
+        --three: #00df52;
         --four: #ff9900;
         --typeface: 'Fredoka One';
         --comptypeface: 'Dosis';
@@ -44,20 +44,12 @@
     }
 
     .clradd{
-        height:0.5in;
-        transform:scale(1);
-        width:calc(4in + 60px) !important;
-        border: 1px solid #01FF5E;
-        background: linear-gradient(to bottom right, #01ff5e94, #00836D);
+        margin-top:15px;
+        width:calc(4in + 30px) !important;
         color:white;
         font-size: 20px;
         font-weight: 100;
-        border-radius: 20px;
         cursor: pointer;
-        box-shadow: 0px transparent;
-        margin:15px;
-        background-color: transparent;
-        box-shadow: 0 0px 0 transparent;
         transition:0.5s all ease;
         filter: grayscale(0%) !important;
     }
@@ -66,17 +58,6 @@
         filter: grayscale(100%) !important;
         cursor: not-allowed !important;
         transition: 0.5s all ease;
-    }
-    .clradd:hover{
-        box-shadow: 0 0px 0 transparent !important;
-        top: -0.2in !important;
-    }
-    .clradd .fa-plus{
-        width:1in;
-        height:0.5in;
-        margin-top:0.15in;
-        color:white;
-        margin-left:0px;
     }
 
     .colorpicker-container {
@@ -317,7 +298,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         color: white;
     }
 
-        form > div {
+    #selectedSpeedDiv {
             color: white;
             display: block;
             position: absolute;
@@ -325,12 +306,12 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             left: -4px;
             bottom: -4px;
             width: calc(33.33% + 8px);
-            background: linear-gradient(to left, #14141450,#4d00b2);
+            background: linear-gradient(to bottom right, #000000, #2e0960);
             border-radius: 100px;
-            z-index: 1;
             pointer-events: none;
             border: 1px solid #8426FF;
-            transition: transform 0.3s;
+            transition: transform 0.3s ease-out;
+            z-index: 1;
         }
 
         form::after {
@@ -345,7 +326,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             position: relative;
             padding: 20px 0px 40px;
             overflow: hidden;
-            border-left: solid 1px rgba(0,0,0,0.2);
+            border-left: solid 1px rgba(0,0,0,0);
             transition: color 0.3s;
             cursor: pointer;
             -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
@@ -388,7 +369,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     }
 
         .magictitle-success {
-            color: #00FF5E;
+            color: #00df52;
             transition: 0.5s;
         }
 
@@ -655,7 +636,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
     .enabled {
         font-family: 'Fredoka One';
-        background-color: #00ff5e;
+        background-color: #00df52;
         text-decoration: none;
         color: black;
         box-shadow: 0 7px 0 #00b041;
@@ -756,7 +737,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         background-color: #ff5353;
         text-decoration: none;
         color: #ffffff;
-        box-shadow: 0 7px 0 #d00000;
+        box-shadow: 0 7px 0 #dc0202;
         border-radius: 20px;
         padding: 20px;
         user-select: none;
@@ -775,7 +756,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 box-shadow: none;
             }
             
-    #savedash {
+    .savedash {
         font-family: 'Fredoka One';
         background-color: #FF9900;
         text-decoration: none;
@@ -789,12 +770,12 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         font-weight: 100;
     }
 
-        #savedash:hover {
+        .savedash:hover {
             position: relative;
             box-shadow: 0 5px 0 #bf7200;
         }
 
-            #savedash:hover:active {
+            .savedash:hover:active {
                 position: relative;
                 box-shadow: none;
             }
@@ -825,10 +806,10 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
 	#dashboardbuttonoptions{
 		font-family: 'Fredoka One';
-        	background-color: #00ff5e;
+        	background-color: #00df52;
         text-decoration: none;
         color: #ffffff;
-        box-shadow: 0 7px 0 #00b041;
+        box-shadow: 0 7px 0 #008e34;
         border-radius: 20px;
         padding: 20px;
         user-select: none;
@@ -846,6 +827,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 position: relative;
                 box-shadow: none;
             }
+
 
             .betabutton {
         font-family: 'Fredoka One';
@@ -909,6 +891,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
                 position:absolute;
                 top:0px;
                 right:0px;
+                transform-style: preserve-3d;
             }
             #settingssidebar{
                 height:100vh;
@@ -1217,8 +1200,8 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         cursor: pointer;
         font-size: 1.18rem;
         white-space: nowrap;
-        background: linear-gradient(to left, #00ff5e90, #14141400);
-        border: #00FF5E 1px solid;
+        background: linear-gradient(to left, #00df5290, #14141400);
+        border: #00df52 1px solid;
         padding: 13px 20px;
         border-radius: 30px;
         transition: 0.5s all;
@@ -1345,7 +1328,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
     .tabs-box .autopilottab.active {
         color: #fff;
-        background: #00FF5E;
+        background: #00df52;
         border-color: transparent;
     }
 
@@ -1407,7 +1390,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
 
     .tabs-box .autopilottab:hover {
         color: #fff;
-        background: #00FF5E;
+        background: #00df52;
         border-color: transparent;
         border: #141414 1px solid;
         transform: scale(0.9);
@@ -2153,4 +2136,23 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     border-radius: 20px;
     padding:50px;
     background:linear-gradient(to bottom right, #ff53535f, #00000000);
+    margin-top:50px;
   }
+
+  #presetupScheduleContent{
+    border:#FF9900 2px dashed;
+    width:75%;
+    border-radius: 20px;
+    padding:50px;
+    background:linear-gradient(to bottom right, #FF99005f, #00000000);
+    transition: transform 0.1s ease-out;
+    transform-style: preserve-3d;
+    overflow:visible;
+    will-change: transform;
+    backface-visibility: hidden;
+  }
+
+  #mainpanebodycontainer{
+    perspective: 100000000px;
+    transform-style: flat; 
+}
