--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -287,6 +287,19 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     transition: 0.5s all;
 }
 
+.localshortcutinput {
+    color: white;
+    border-radius: 20px;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: 100;
+    outline: 1px solid black;
+    background: linear-gradient(to left, rgba(0,0,0,88), #14141400);
+    font-family: 'Fredoka One';
+    border: 0px transparent;
+    transition: 0.5s all;
+}
+
 ::-webkit-calendar-picker-indicator {
     filter: invert();
 }
