--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -294,7 +294,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
     font-size: 20px;
     font-weight: 100;
     outline: 1px solid black;
-    background: linear-gradient(to left, rgba(0,0,0,20), #14141400);
+    background: transparent;
     font-family: 'Fredoka One';
     border: 0px transparent;
     transition: 0.5s all;
