--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -327,11 +327,15 @@ form {
     border-radius: 100px;
     pointer-events: none;
     border: 1px solid #8426FF;
-    transition: transform 0.3s ease-out;
+    transition: transform 0.3s ease-out, background-color 0.5s ease;
     z-index: 1;
     backdrop-filter: blur(17.1px);
     -webkit-backdrop-filter: blur(17.1px);
     transform-origin: center;
+}
+
+#searchTypeToggle:hover #selectedSpeedDiv{
+    background-color: #8426FF;
 }
 
 
