--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -1246,7 +1246,19 @@ a:hover:active {
     font-family: 'Fredoka One';
 }
 
-
+.tabs-box .debugtab {
+    margin: 0px;
+    cursor: pointer;
+    font-size: 1.18rem;
+    white-space: nowrap;
+    background: linear-gradient(to left, #ff535390, #14141400);
+    border: #ff5353 1px solid;
+    padding: 13px 20px;
+    border-radius: 30px;
+    transition: 0.5s all;
+    color: white;
+    font-family: 'Fredoka One';
+}
 
 .tabs-box.dragging .tab {
     user-select: none;
@@ -1357,6 +1369,12 @@ a:hover:active {
     filter: brightness(0.8);
 }
 
+.tabs-box.dragging .debugtab {
+    user-select: none;
+    pointer-events: none;
+    filter: brightness(0.8);
+}
+
 .tabs-box .mcatab.active {
     color: #fff;
     background: #26b3ff;
@@ -1366,6 +1384,12 @@ a:hover:active {
 .tabs-box .autopilottab.active {
     color: #fff;
     background: #00df52;
+    border-color: transparent;
+}
+
+.tabs-box .debugtab.active {
+    color: #fff;
+    background: #ff5353;
     border-color: transparent;
 }
 
@@ -1428,6 +1452,16 @@ a:hover:active {
 .tabs-box .autopilottab:hover {
     color: #fff;
     background: #00df52;
+    border-color: transparent;
+    border: #141414 1px solid;
+    transform: scale(0.9);
+    animation: jiggle 0.6s infinite;
+    overflow-y: visible;
+}
+
+.tabs-box .debugtab:hover {
+    color: #fff;
+    background: #ff5353;
     border-color: transparent;
     border: #141414 1px solid;
     transform: scale(0.9);
